Fixed dark mode issue for main container

--- a/styles/manager.scss
+++ b/styles/manager.scss
@@ -78,18 +78,19 @@ body {
 .main-container {
   //background-color: lightgray;
   padding: 20px;
-  border: 1px solid skyblue;
-  border-radius: 5px;
+  border: 1px solid darkgray;
+  border-radius: 15px;
   margin-top: 1%;
   //margin-left: 20%;
   //margin-right: 20%;
 
   &.dark-mode {
-  background-color: darkgrey;
-  color: #f5f5f5;
+  background-color: rgb(72, 71, 71);
+  color: white;
+  border: 1px solid lightgray
   }
 
-
+}
 
 table {
   width: 100%;
